bad/method_call_invalid_arg_conversion_void_to_string.example_compiler_output
ERROR
[1mbad/method_call_invalid_arg_conversion_void_to_string.lat:3:14: [1;31merror: [0;1mvalue of type `void` is not convertible to type `string`[m
	(new G).foo((new G).foo(""));
	            [1;32m^[m
[1mbad/method_call_invalid_arg_conversion_void_to_string.lat:8:2: [1;34mnote: [0;1m`foo` declared here[m
	void foo(string s) {}
	[1;32m^[m
